baml_language/crates/baml_tests/snapshots/namespaces_same_name/baml_tests__namespaces_same_name__01_lexer__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Root"
Word "namespace"
Colon ":"
Word "demonstrates"
Word "that"
Word "same-name"
Word "types"
In "in"
Word "different"
Slash "/"
Slash "/"
Word "namespaces"
Word "don"
Error "'"
Word "t"
Word "conflict"
Dot "."
Word "Uses"
Word "root"
Dot "."
Star "*"
In "in"
Word "type"
Word "position"
Word "only"
Slash "/"
Slash "/"
LParen "("
Word "expression-position"
Word "root"
Dot "."
Star "*"
Word "is"
Word "deferred"
RParen ")"
Dot "."
Function "function"
Word "GetLlmText"
LParen "("
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Response"
LBrace "{"
Word "root"
Dot "."
Word "llm"
Dot "."
Word "Response"
LBrace "{"
Word "text"
Colon ":"
Quote "\""
Word "hello"
Quote "\""
Comma ","
Word "tokens"
Colon ":"
IntegerLiteral "5"
RBrace "}"
RBrace "}"
Function "function"
Word "GetHttpStatus"
LParen "("
RParen ")"
Arrow "->"
Word "root"
Dot "."
Word "http"
Dot "."
Word "Response"
LBrace "{"
Word "root"
Dot "."
Word "http"
Dot "."
Word "Response"
LBrace "{"
Word "status"
Colon ":"
IntegerLiteral "200"
Comma ","
Word "body"
Colon ":"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
