baml_language/crates/baml_tests/snapshots/namespaces_same_name/baml_tests__namespaces_same_name__01_lexer__ns_http_types.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Same"
Word "name"
Quote "\""
Word "Response"
Quote "\""
In "in"
Word "http"
Word "namespace"
Error "—"
Word "no"
Word "conflict"
With "with"
Word "llm"
Dot "."
Word "Response"
Class "class"
Word "Response"
LBrace "{"
Word "status"
Word "int"
Word "body"
Word "string"
RBrace "}"
